[gd_scene load_steps=13 format=3 uid="uid://b20poguirk4rv"]

[ext_resource type="Script" path="res://enemy_future.gd" id="1_mm7te"]
[ext_resource type="PackedScene" uid="uid://bqbafpwwqrdfj" path="res://enemy_bullet.tscn" id="2_45yfi"]
[ext_resource type="Texture2D" uid="uid://bbgnaorml4t6l" path="res://Assets/Enemy1.png" id="3_n4xh0"]
[ext_resource type="Texture2D" uid="uid://c5iepdx03ldfk" path="res://Assets/WaterGuns.png" id="4_idw6w"]
[ext_resource type="AudioStream" uid="uid://00yk55283a2e" path="res://Assets/Sounds/EnemyDamage.wav" id="5_quovl"]
[ext_resource type="AudioStream" uid="uid://cg1rbde3fx1n2" path="res://Assets/Sounds/LaserShot.wav" id="6_sk7gh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lmpcc"]
radius = 12.0416

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gj0n"]
size = Vector2(60, 60)

[sub_resource type="Animation" id="Animation_wojk3"]
resource_name = "RESET"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Alive/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.533333), Color(1, 0, 0, 0.533333), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_mband"]
resource_name = "hurtBlink"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Alive/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.42, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 0, 0, 0.713726), Color(1, 1, 1, 0.352941), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q4dsh"]
_data = {
"RESET": SubResource("Animation_wojk3"),
"hurtBlink": SubResource("Animation_mband")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gof8u"]
radius = 484.0

[node name="EnemyPresent" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_mm7te")
Bullet = ExtResource("2_45yfi")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lmpcc")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_4gj0n")

[node name="Graphics" type="Node2D" parent="."]

[node name="Alive" type="Sprite2D" parent="Graphics"]
texture_filter = 1
scale = Vector2(1.87097, 1.87097)
texture = ExtResource("3_n4xh0")
region_enabled = true
region_rect = Rect2(-0.170883, -0.0276604, 31.8391, 31.8391)

[node name="ColorRect" type="ColorRect" parent="Graphics/Alive"]
clip_children = 2
offset_left = -16.0
offset_top = -17.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="Gun" type="Sprite2D" parent="Graphics"]
texture_filter = 1
position = Vector2(5, -47)
rotation = 1.5708
scale = Vector2(1.4983, 1.4983)
texture = ExtResource("4_idw6w")
region_enabled = true
region_rect = Rect2(-0.0388641, -0.318085, 32.0785, 25.8543)

[node name="RayCast2D" type="RayCast2D" parent="."]
light_mask = 7
visibility_layer = 7
position = Vector2(-2, -1)
target_position = Vector2(349, 1)
collision_mask = 4

[node name="ReloadTimer" type="Timer" parent="RayCast2D"]
wait_time = 2.0
one_shot = true

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q4dsh")
}

[node name="hurtTimer" type="Timer" parent="."]
wait_time = 0.382
one_shot = true

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_gof8u")

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_quovl")

[node name="Gun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_sk7gh")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
